NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace Quiche
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "quiche_bindgen";



        [DllImport(__DllName, EntryPoint = "__quiche_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* quiche_version();

        [DllImport(__DllName, EntryPoint = "__quiche_enable_debug_logging", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_enable_debug_logging(delegate* unmanaged[Cdecl]<byte*, void*, void> cb, void* argp);

        [DllImport(__DllName, EntryPoint = "__quiche_config_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Config* quiche_config_new(uint version);

        [DllImport(__DllName, EntryPoint = "__quiche_config_load_cert_chain_from_pem_file", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_config_load_cert_chain_from_pem_file(Config* config, byte* path);

        [DllImport(__DllName, EntryPoint = "__quiche_config_load_priv_key_from_pem_file", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_config_load_priv_key_from_pem_file(Config* config, byte* path);

        [DllImport(__DllName, EntryPoint = "__quiche_config_load_verify_locations_from_file", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_config_load_verify_locations_from_file(Config* config, byte* path);

        [DllImport(__DllName, EntryPoint = "__quiche_config_load_verify_locations_from_directory", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_config_load_verify_locations_from_directory(Config* config, byte* path);

        [DllImport(__DllName, EntryPoint = "__quiche_config_verify_peer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_verify_peer(Config* config, [MarshalAs(UnmanagedType.U1)] bool v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_grease", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_grease(Config* config, [MarshalAs(UnmanagedType.U1)] bool v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_discover_pmtu", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_discover_pmtu(Config* config, [MarshalAs(UnmanagedType.U1)] bool v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_log_keys", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_log_keys(Config* config);

        [DllImport(__DllName, EntryPoint = "__quiche_config_enable_early_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_enable_early_data(Config* config);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_application_protos", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_config_set_application_protos(Config* config, byte* protos, nuint protos_len);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_max_amplification_factor", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_max_amplification_factor(Config* config, nuint v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_max_idle_timeout", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_max_idle_timeout(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_max_recv_udp_payload_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_max_recv_udp_payload_size(Config* config, nuint v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_max_send_udp_payload_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_max_send_udp_payload_size(Config* config, nuint v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_initial_max_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_initial_max_data(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_initial_max_stream_data_bidi_local", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_initial_max_stream_data_bidi_local(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_initial_max_stream_data_bidi_remote", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_initial_max_stream_data_bidi_remote(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_initial_max_stream_data_uni", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_initial_max_stream_data_uni(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_initial_max_streams_bidi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_initial_max_streams_bidi(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_initial_max_streams_uni", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_initial_max_streams_uni(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_ack_delay_exponent", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_ack_delay_exponent(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_max_ack_delay", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_max_ack_delay(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_disable_active_migration", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_disable_active_migration(Config* config, [MarshalAs(UnmanagedType.U1)] bool v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_cc_algorithm_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_config_set_cc_algorithm_name(Config* config, byte* algo);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_initial_congestion_window_packets", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_initial_congestion_window_packets(Config* config, nuint packets);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_cc_algorithm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_cc_algorithm(Config* config, int algo);

        [DllImport(__DllName, EntryPoint = "__quiche_config_enable_hystart", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_enable_hystart(Config* config, [MarshalAs(UnmanagedType.U1)] bool v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_enable_pacing", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_enable_pacing(Config* config, [MarshalAs(UnmanagedType.U1)] bool v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_max_pacing_rate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_max_pacing_rate(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_enable_dgram", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_enable_dgram(Config* config, [MarshalAs(UnmanagedType.U1)] bool enabled, nuint recv_queue_len, nuint send_queue_len);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_max_connection_window", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_max_connection_window(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_max_stream_window", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_max_stream_window(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_active_connection_id_limit", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_active_connection_id_limit(Config* config, ulong v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_stateless_reset_token", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_stateless_reset_token(Config* config, byte* v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_disable_dcid_reuse", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_set_disable_dcid_reuse(Config* config, [MarshalAs(UnmanagedType.U1)] bool v);

        [DllImport(__DllName, EntryPoint = "__quiche_config_set_ticket_key", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_config_set_ticket_key(Config* config, byte* key, nuint key_len);

        [DllImport(__DllName, EntryPoint = "__quiche_config_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_config_free(Config* config);

        [DllImport(__DllName, EntryPoint = "__quiche_header_info", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_header_info(byte* buf, nuint buf_len, nuint dcil, uint* version, byte* type_, byte* scid, nuint* scid_len, byte* dcid, nuint* dcid_len, byte* token, nuint* token_len);

        [DllImport(__DllName, EntryPoint = "__quiche_accept", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Conn* quiche_accept(byte* scid, nuint scid_len, byte* odcid, nuint odcid_len, sockaddr* local, int local_len, sockaddr* peer, int peer_len, Config* config);

        [DllImport(__DllName, EntryPoint = "__quiche_connect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Conn* quiche_connect(byte* server_name, byte* scid, nuint scid_len, sockaddr* local, int local_len, sockaddr* peer, int peer_len, Config* config);

        [DllImport(__DllName, EntryPoint = "__quiche_negotiate_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_negotiate_version(byte* scid, nuint scid_len, byte* dcid, nuint dcid_len, byte* @out, nuint out_len);
